<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrainTTS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Start">始</string>
    <string name="End">终</string>
    <string name="title">北京 　 一　 沈阳</string>
    <string name="Speed">运行速度</string>
    <string name="Duan">交路号</string>
    <string name="Jie">车站号</string>
    <string name="Location">公里标（单位：km）</string>
    <string name="Operation">执行操作</string>
    <string name="trainNum">T985</string>
    <string name="speeds">213 km/h</string>
    <string name="DriverNum">司机号</string>
    <string name="trainGroup">列车编组</string>
    
    <string name="main2serialtitle">串口测试</string>
	<string name="main2serialrecetext">接收区</string>
	<string name="main2serialsendtext">发送区</string>
	<string name="main2serialsendbutton">发送</string>
	<string name="main2serialnumber">端口号</string>
	<string name="main2serialbaute">波特率</string>
	<string name="main2serialparitybit">校验位</string>
	<string name="main2serialdatabit">数据位</string>
	<string name="main2serialstopbit">停止位</string>
	<string name="main2serialopenbutton">打开</string>
	<string name="main2serialclosebutton">关闭</string>
	<string name="main2serialclearrecebutton">清空接收</string>
	
</resources>
